Compatibility measure & wired move packet